B&L QA/objects/Current_Situation__c.object
<CustomObject>
    <fields>
        <fullName>Account_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Profile</label>
        <referenceTo>Account_Profile__c</referenceTo>
        <relationshipLabel>Current Situations</relationshipLabel>
        <relationshipName>Current_Situations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Buying_Decision_Influence__c</fullName>
        <label>Buying Decision Influence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Champion__c</fullName>
        <label>Company Champion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor</fullName>
                    <default>true</default>
                    <label>Competitor</label>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>B+L</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Contact_Role__c</field>
                <operation>equals</operation>
                <value>Surgeon, Facility</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Current Situations</relationshipLabel>
        <relationshipName>Current_Situations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Early_Adopter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Early Adopter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Equipment_Age__c</fullName>
        <label>Equipment Age(Years)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <label>Equipment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Obstacles__c</fullName>
        <label>Goal Obstacles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IOL_Price__c</fullName>
        <label>IOL Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IOL_Type__c</fullName>
        <label>IOL Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOL_Units__c</fullName>
        <label>IOL Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OVD_Price__c</fullName>
        <label>OVD Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OVD_Type__c</fullName>
        <label>OVD Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OVD_Units__c</fullName>
        <label>OVD Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Obstacle_for_Positive_Decision__c</fullName>
        <label>Obstacle for Positive Decision</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PIOL_Price__c</fullName>
        <label>PIOL Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PIOL_Type__c</fullName>
        <label>PIOL Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIOL_Units__c</fullName>
        <label>PIOL Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resources_Needed_For_Decision__c</fullName>
        <label>Resources Needed For Decision</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Surgeon</fullName>
                </value>
                <value>
                    <fullName>CEO (ASC or Hosp.)</fullName>
                </value>
                <value>
                    <fullName>CFO (ASC or Hosp.)</fullName>
                </value>
                <value>
                    <fullName>GPO Rep</fullName>
                </value>
                <value>
                    <fullName>OR Director</fullName>
                </value>
                <value>
                    <fullName>Materials Mgr</fullName>
                </value>
                <value>
                    <fullName>Eye Nurse</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technique__c</fullName>
        <label>Technique</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Current Situation</label>
    <nameField>
        <displayFormat>STU - {0000000000}</displayFormat>
        <label>Situation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Current Situations</pluralLabel>
    <recordTypes>
        <fullName>Facility</fullName>
        <active>true</active>
        <label>Facility</label>
    </recordTypes>
    <recordTypes>
        <fullName>Surgeon</fullName>
        <active>true</active>
        <label>Surgeon</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>